jmp - module4 - task4 timing fix